{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "34c2de7f-5bfb-4c80-95f9-481957297b8a",
            "actions": [
                {
                    "name": "attack",
                    "type": "Value",
                    "id": "addade6c-fed9-4d99-84ce-5b4be7c7bd75",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "jump",
                    "type": "Value",
                    "id": "00168d7d-699b-49dd-b297-e0836d964806",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "horizontal",
                    "type": "Button",
                    "id": "de0201b5-5c2d-4e18-98d3-a2beec71dac2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b7995dfe-19b4-4d51-90fe-a294ea986df6",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fbcba1e6-e847-4dfe-8133-95d45e3f4fdf",
                    "path": "<Keyboard>/j",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aae21258-95d1-40a1-87e2-ef18c3220610",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b41e0b8-00d0-4088-96f2-f14cbe159b73",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "sideways keyboard",
                    "id": "a64a2945-a0a9-4556-bd64-cbbc1bb7f44c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "e3b0f2b3-4680-402c-bbc5-24afa0d4cccc",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "3218c436-f34b-49b2-bba6-ddab9d3dbf00",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "sideways gamepad",
                    "id": "77935b60-a8ac-43f1-9e8c-9f5fb59f33d4",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "0be60d0a-e34e-421d-a9d3-29efd37f8349",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "84b77e77-8949-4f74-961f-61c130c9a68e",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": true,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}